<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_menu_home"
        android:iconTint="@color/black"
        android:icon="@drawable/bottom_menu_home_icon"
        android:title="@string/home_screen_tittle" />

    <item
        android:id="@+id/bottom_menu_history"
        android:icon="@drawable/bottom_menu_history_icon"
        android:title="@string/history_tittle" />

    <item
        android:id="@+id/bottom_menu_insights"
        android:icon="@drawable/bottom_menu_insights_icon"
        android:title="@string/insights_tittle" />

    <item
        android:id="@+id/bottom_menu_profile"
        android:icon="@drawable/bottom_menu_profile_icon"
        android:title="@string/profile_tittle" />
</menu>
